[tool.poetry]
name = "dream-data-processor"
version = "0.1.0"
description = ""
authors = ["io-tronic <vittenino@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.2"
tqdm = "^4.66.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
